fixed word wrapping
(cherry picked from commit 0a3fb992b9bd885a1dba769b73da7c41ad670a92)

--- a/PhpbbInDotnet.Forum/wwwroot/css/Common.css
+++ b/PhpbbInDotnet.Forum/wwwroot/css/Common.css
@@ -55,10 +55,6 @@ h3 {
     margin-top: 0px !important;
 }
 
-a {
-    word-break: break-all;
-}
-
 .message {
     display: none;
     color: white;
